# sxxcvr

./: .gitignore  LICENSE  README.md
SoapySX/: 60-pipewire-do-not-use-i2s.lua  CMakeLists.txt  SoapySX.cpp  test.py  test_gains.py  test_i2s_rx.sh  test_i2s_tx.sh  test_linked_streams.py  version.sh
SoapySX/calibration/: calibrate.py
SoapySX/test/: README.md  test_linked_streams.py  test_timestamps.py
dts/: Makefile  README.md  install_dtb.sh  install_raspberrypi.sh  sx1255_raspberrypi.dts  verify_eeprom.sh
example/: linear_repeater.py  plot_rxtx_response.py  tx_test.py
